@@ -2,6 +2,7 @@
 - Fix item tooltips breaking when no material data is available
 - Fix additional deprecation warnings
 - Fix rest button not working
+- Fix movement calculation
 
 ## 0.11.1
 - Additional compatibility fixes for PathfinderV1 v11
